Replace fixed thread pool with virtual thread-per-task executor in `HttpServer` for improved concurrency.